--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,19 +1,7 @@
 .navbar {
-    background-color: #333;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .navbar-content {
-    max-width: 200px;
-    margin: 0 auto;
-  }
-  
-  .navbar-title {
-    font-size: 24px;
-    color: white;
-  }
-  
-  .bold {
-    font-weight: bold;
-  }
+  background-color: #E7E7E7;
+  padding: 10px;
+  text-align: center;
+}
+
+
