--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -1,17 +1,20 @@
-.pictogram{
+.pictogram
+{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	background-color: white;
 }
 
-.pictogramImage{
+.pictogramImage
+{
 	margin-top: 75px;
 	width: 328px;
 	height: 184px;
 }
 
-.bodyText{
+.bodyText
+{
 	text-align: center;
 	margin-top: 20px;
 }
