--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -1,3 +1,12 @@
+.main
+{
+	min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+	align-items: center;
+}
+
 .pictogram
 {
 	display: flex;
@@ -8,13 +17,16 @@
 
 .pictogramImage
 {
-	margin-top: 75px;
-	width: 328px;
-	height: 184px;
+	width: 70%;
 }
 
 .bodyText
 {
 	text-align: center;
 	margin-top: 20px;
+}
+
+.play
+{
+	width: 20%;
 }
