--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,18 +1,37 @@
-.button{
+.recordButton
+{
+    border: 3px solid #183153;
     border-radius: 8px;
-    background: #404040;
-    width: 23rem;
-    display: flex;
+    background: #183153;
+    width: 328px;
     height: 64px;
+    display: flex;
     justify-content: center;
     align-items: center;
     gap: 8px;
     flex-shrink: 0;
-    color: white;
-    font-size: 14px;
-    
+    color: #E4E2F9;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 20px;
 }
 
-.button:hover{
-    background:#BFBFBF;
+.playButton
+{
+    border: 2px solid #183153;
+    border-radius: 8px;
+    background-color: #F3F2FC;
+    color:#183153;
+    font-weight: bold;
+    width: 185px;
+    height: 29px;
+    cursor: pointer;
+    margin-top: 15px;
+}
+
+.buttonsBody
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
