--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,12 @@
 article
 {
   min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+body{
+  background-color: #E4E2F9;
 }
