--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,15 @@
   box-sizing: border-box;
   font-family: "Montserrat";
   margin: 0;
-}
-
-article
-{
-  min-height: 80vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 0;
 }
 
 body{
   background-color: #E4E2F9;
+
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
