--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,19 +1,23 @@
 .footer {
   width: 100%;
   background-color: #183153;
-  padding: 10px;
+  padding: 20px;
   color: #E4E2F9;
   gap: 20px;
   font-size: 14px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   min-height: 10vh;
   flex-shrink: 0;
   margin-bottom: 0;
 }
 
+.link1{
+  text-decoration: none;
+  color: #E4E2F9;
+}
   
   
