--- a/src/pages/LabelResults/LabelResults.css
+++ b/src/pages/LabelResults/LabelResults.css
@@ -8,3 +8,14 @@
 {
 	height: 130px;
 }
+
+.cardResults {
+	width: 95%; 
+	font-size: 0.88rem;
+	height: auto; 
+	margin: auto;
+	padding: 16px; 
+	border: 1px solid #e0e0e0; 
+	border-radius: 4px; 
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+}
