--- a/src/pages/UserView/UserView.css
+++ b/src/pages/UserView/UserView.css
@@ -1,22 +1,19 @@
-.emptyBox
-{
+.emptyBox{
 	height: 130px;
 }
 
-.text
-{
+.text{
 	color: #183153;
 	text-align: center;
 	margin-bottom: 10px;
 }
 
-.greetingTextUser
-{
+.greetingTextUser{
 	font-size: 40px;
 }
 
-.textUser
-{
+.textUser {
+	margin-top: 1%;
 	font-size: 15px;
     font-weight: 500;
 }
