--- a/src/pages/Registration/Registration.css
+++ b/src/pages/Registration/Registration.css
@@ -23,9 +23,17 @@
 	background-color: #E4E2F9;
 	display: flex;
 	flex-direction: column;
-	align-items: center
+	align-items: center;
+	margin-bottom: 5%;
 }
-
+#regis {
+	cursor: pointer;
+	text-align: center;
+	font-size: 0.8rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 .formGroup
 {
 	display: flex;
