--- a/src/pages/LabelResults/LabelResults.css
+++ b/src/pages/LabelResults/LabelResults.css
@@ -1,12 +1,19 @@
+.results-container
+{
+    display: flex;
+    justify-content: center;
+    min-height: 80vh;
+    align-items: center;
+}
+
 .results
 {
 	border-radius: 8px;
     background-color: #F3F2FC;
     color: #183153;
-    width: 40%;
+    width: 50%;
     box-shadow: 5px 5px 7px #D5D2F6;
     margin-bottom: 15px;
-    font-size: 1.2rem;
     font-weight: 600;
 }
 
@@ -14,4 +21,25 @@
 {
 	width: 100%;
 	padding: 0;
+}
+
+.results p
+{
+	width: 50%;
+	text-align: center;
+	font-size: 100%;
+}
+
+.results li
+{
+	display: flex;
+	padding: 1rem;
+}
+
+@media (max-width: 490px) 
+{
+	.results
+	{
+	    width: 70%;
+	}
 }
