--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -11,12 +11,34 @@
 }
 
 .dropdown-menu {
+    padding: auto;
     display: none;
     position: absolute;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    background-color: transparent;
     right: 0;
+    text-align: center;
+}
+.dduserName{
+    text-decoration: underline;
+}
+
+.ddButton{
+    background-color: #183153;
+    border-radius: 10%;
+    color: white;
+    font-weight: 600;
+    margin:10% 5%;
+    cursor: pointer;
+    padding: 10% 0;
+    width: 100px;
+    display: block;
+    text-align: center;
+    
+}
+.ddButton:hover {
+    background: #D5D2F6;
+    color: #183153;
+    font-weight: 600;
 }
 
 .avatar-container:hover .dropdown-menu {
