--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,12 +2,18 @@
   background-color: #D5D2F6;
   width: 100%;
   min-height: 10vh;
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-gap:center;
   align-items: center;
+  padding: 0 20px;
 }
 
 .navbarLogo{
+  justify-self: center;
   width: 55px;
-  height: 55px;;
+  height: 55px;
+}
+.avatar{
+  justify-self: end;
 }
