--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,12 @@
 
 body{
   background-color: #E4E2F9;
-
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+.main-content{
+  margin-bottom: 80px;
 }
