--- a/src/components/HistoryCards/HistoryCards.css
+++ b/src/components/HistoryCards/HistoryCards.css
@@ -37,8 +37,9 @@
 {
 	display: flex;
     flex-wrap: wrap;
-    padding: 1rem;
+    padding: 10px;
 	width: 80%;
+
 }
 .history-labels ul {
 	list-style: none; 
@@ -53,7 +54,7 @@
 	justify-content: space-between;
 	margin-bottom: 10px;
 	margin-right: 10px;
-	gap: 1%;
+
 }
 
 .icons-container{
@@ -88,5 +89,6 @@
 .porcentage {
 	margin-top: 5px; 
 	margin-bottom: 5px;
+	text-align: end;
 	
 }
